Added test system, repaired party permissions, Update README and CHANGELOG